@@ -314,15 +314,25 @@ test17 = do
     ["test","--","@foo"] === Test17 ["test","@foo"]
 
 
+data Debuggable = This | That deriving (Eq,Show,Data,Typeable)
+data Test18 = Test18 {test18_ :: [Debuggable]} deriving (Eq,Show,Data,Typeable)
+
+mode18 = cmdArgsMode $ Test18 $ enum [[] &= ignore, [This] &= name "debug-this", [That] &= name "debug-that"]
+
+test18 = do
+    let Tester{..} = tester "Test18" mode18
+    [] === Test18 []
+    ["--debug-this","--debug-that","--debug-this"] === Test18 [This,That,This]
+
 -- For some reason, these must be at the end, otherwise the Template Haskell
 -- stage restriction kicks in.
 
 test = test1 >> test2 >> test3 >> test4 >> test5 >> test6 >> test7 >> test8 >> test9 >> test10 >>
-       test11 >> test12 >> test13 >> test14 >> test15 >> test16
+       test11 >> test12 >> test13 >> test14 >> test15 >> test16 >> test18
 demos = zipWith f [1..]
         [toDemo mode1, toDemo mode2, toDemo mode3, toDemo mode4, toDemo mode5, toDemo mode6
         ,toDemo mode7, toDemo mode8, toDemo mode9, toDemo mode10, toDemo mode11, toDemo mode12
-        ,toDemo mode13, toDemo mode14, toDemo mode15, toDemo mode16, toDemo mode17]
+        ,toDemo mode13, toDemo mode14, toDemo mode15, toDemo mode16, toDemo mode17, toDemo mode18]
     where f i x = x{modeHelp = "Testing various corner cases (" ++ show i ++ ")"}
 
 
